# ChangeLog for app-arch/libarchive
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.68 2009/10/25 19:37:08 flameeyes Exp $

*libarchive-2.7.1-r1 (25 Oct 2009)

  25 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libarchive-2.7.1-r1.ebuild, metadata.xml:
  Bump revision adding a static-libs USE flag to disable libarchive.a build;
  also remove .la file when disabling static libraries (thanks to Mauro
  Toffanin for this). Extend the metadata USE documentation to explain that
  the various USE flags don't stop bsdtar from calling the decompressor
  command as a filter.

*libarchive-2.7.1 (09 Sep 2009)

  09 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libarchive-2.7.1.ebuild:
  Version bump, thanks zzam in bug #284233.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> libarchive-2.7.0-r1.ebuild:
  Marking libarchive-2.7.0-r1 ppc64 for bug 279679

  29 Aug 2009; nixnut <nixnut@gentoo.org> libarchive-2.7.0-r1.ebuild:
  ppc stable #279679

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> libarchive-2.7.0-r1.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #279679

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  libarchive-2.7.0-r1.ebuild:
  stable x86, bug 279679

  31 Jul 2009; <chainsaw@gentoo.org> libarchive-2.7.0-r1.ebuild:
  Marked stable on AMD64 as requested by Diego E. 'Flameeyes' Pettenò
  <flameeyes@gentoo.org> in bug #270679. Compiled-tested on a Core2 Duo with
  USE="bzip2 lzma zlib -acl -static -xattr".

  30 Jul 2009; Jeroen Roovers <jer@gentoo.org> libarchive-2.7.0-r1.ebuild:
  Stable for HPPA (bug #279679).

  20 Jul 2009; Alexis Ballier <aballier@gentoo.org>
  libarchive-2.7.0-r1.ebuild:
  Add missing openssl dep

  29 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -libarchive-2.6.0.ebuild, -libarchive-2.6.1.ebuild,
  -libarchive-2.7.0.ebuild, libarchive-2.7.0-r1.ebuild:
  Migrate to use virtual/acl (xattr is no virtual, they have different