@@ -2,12 +2,11 @@ AUX libarchive-2.6.0-nolibs.patch 1104 RMD160 1c753db6a19e73307fdc7c43e781b37135
 AUX libarchive-2.6.1-headers.patch 635 RMD160 d6d2e7f1dfda2c352fac08b1b48fea611543ab17 SHA1 04fc37daef70f40aafeeadcd627432551533b505 SHA256 a5167e9cc721f3e946ba36e5d2beb35310facea8360c5582adf3d6fa142c2c22
 AUX libarchive-2.7.0-fortified-sources.patch 1057 RMD160 66f769ff31e29399f71f23f972026d46516cac5d SHA1 5187d93686eff8c1f3d8eca8f6389dc0b3cdfdc6 SHA256 78d8bd768e621d91e988570dbff907c37f06895649706aaaa4ccd5e56f0899cf
 AUX libarchive-2.7.0-pipe.patch 3859 RMD160 334dd1d0b9e3e4310afc5c757287f47c6a867ef2 SHA1 e2b3ffd4d16420098abb9d994648feca6b8e9b82 SHA256 01fc2a68b0c9bbcdfd93d69c81f4aa23bf29bd946e8aa768f46b9741ee28f023
-DIST libarchive-2.6.2.tar.gz 948569 RMD160 a32ea45632b2704b13cf04ec5ffba44258c85fa4 SHA1 56be9601877f467369cc7792f1319f0271becd1c SHA256 48c27c0ce12e1363e6f7dd87ee5cf65aaad6ebbaa502791e9aa548d1523ebbb1
 DIST libarchive-2.7.0.tar.gz 1243793 RMD160 997f2809cb91eb84707714cb58f4840dee0a9ea0 SHA1 625347766797929873a8e31819a14c405bcb2275 SHA256 ae21ffc8160241001ecbc7af0751ff65cfc5ceffae8a1b9cf6822328f4c0474e
 DIST libarchive-2.7.1.tar.gz 1248222 RMD160 7a0b5747569452f015e94e54afa90ca85dfd7cca SHA1 3810ded09b2d248eab9754d008f0cf144f27848d SHA256 a7e066ef857d3db0211e2d916ca14aafc48a4776c4fa108fd67092ce862a7ba8
-EBUILD libarchive-2.6.2.ebuild 2000 RMD160 d634369551c1645775672961ba89de749d0d2117 SHA1 90e476da7e42056a23301d310392532fcbc007e6 SHA256 231be552b28495982ef7e939d5ce245e1c232f44053f75b4ecd0050152a33c95
+DIST libarchive-2.7.902a.tar.gz 1443571 RMD160 eebda4d24bcf423779f78538bd123087ff962b9d SHA1 60dc74a5867d728cc073990292a0569c316a818c SHA256 e79e8ad7a7f539abe0bb78f4b4f1aa8a8f96d2350896c7d161f2c3dc3baf1fc8
 EBUILD libarchive-2.7.0-r1.ebuild 2466 RMD160 022bdc493a3935af9f94c91dd53f14c6d3d6c5e7 SHA1 4a4f142c0e237dac1a89dbb979b26431748f5a12 SHA256 47c73657a134601e0ad330753024889dd0d75d1de5c6bff761d718a158c714d1
 EBUILD libarchive-2.7.1-r1.ebuild 2674 RMD160 b1fdf815108e618665d7bd9188d0f1d0f2f30562 SHA1 0f1e8ba89c73f8f4d4e35325ca52154e3441b130 SHA256 06eebd48ed918b13168707df3f782de952cdbf2d7f54ed8b90e91ba871c78ff1
-EBUILD libarchive-2.7.1.ebuild 2402 RMD160 e285b229eae83b56fbfb6f9aa47187c9e59db575 SHA1 8b7a73c814d56252ec5f576157f9250c16426013 SHA256 28de33f24d761ac213aff4685074fc5bc1c56ebbd06bdd5f3961698a1db98150
-MISC ChangeLog 23845 RMD160 ce6f93f20cd7e3bf5a334bc634087bb7b38591d8 SHA1 1c3d1accd3a9c360f1e0585541322fa71afacd18 SHA256 3ba73eeccfea5ebd10ca9dccb0d75b4889ebf9ef7fafc0c5545661e5c0231510
+EBUILD libarchive-2.7.902a.ebuild 2793 RMD160 830e4ba0e04b8081a8bd768156bcea22a69f36fd SHA1 2de374e396398977a80380037a790b3e57833608 SHA256 e397a3066a6fde5e7418a2d169f6d09f121449f6eb2ba651d31dca2b49ee842b
+MISC ChangeLog 24128 RMD160 7fa7f22016bdbcd472d1d634045e53e88bf09666 SHA1 74971bdedeb3837ae0fbc9e4f8ddb8ae2ab80990 SHA256 016398cb46c7380d3240586a3b8f07633c2bd82db6bebabde768e97c5a6863bf
 MISC metadata.xml 1845 RMD160 ebaeeeb4cb7f3c67ef467f51325eee01e736abbe SHA1 ac5a67d2b4aeda593a482c68b5e91bd280e03d81 SHA256 a7d0423f9f20913e7eb763301312de583551f75db9597df2724a22684d800843
