@@ -1,77 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/libarchive-2.6.2.ebuild,v 1.8 2009/04/27 13:51:00 jer Exp $
-
-EAPI=1
-
-inherit eutils libtool toolchain-funcs autotools
-
-DESCRIPTION="BSD tar command"
-HOMEPAGE="http://people.freebsd.org/~kientzle/libarchive"
-SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.gz
-	http://people.freebsd.org/~kientzle/libarchive/src/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc64-solaris ~x86-solaris"
-IUSE="static acl xattr kernel_linux +bzip2 +lzma +zlib"
-
-COMPRESS_LIBS_DEPEND="lzma? ( app-arch/lzma-utils )
-		bzip2? ( app-arch/bzip2 )
-		zlib? ( sys-libs/zlib )"
-
-RDEPEND="!dev-libs/libarchive
-	kernel_linux? (
-		acl? ( sys-apps/acl )
-		xattr? ( sys-apps/attr )
-	)
-	!static? ( ${COMPRESS_LIBS_DEPEND} )"
-DEPEND="${RDEPEND}
-	${COMPRESS_LIBS_DEPEND}
-	kernel_linux? ( sys-fs/e2fsprogs
-		virtual/os-headers )"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	elibtoolize
-	epunt_cxx
-}
-
-src_compile() {
-	local myconf
-
-	if ! use static ; then
-		myconf="--enable-bsdtar=shared --enable-bsdcpio=shared"
-	fi
-
-	econf --bindir="${EPREFIX}"/bin \
-		--enable-bsdtar --enable-bsdcpio \
-		$(use_enable acl) $(use_enable xattr) \
-		$(use_with zlib) \
-		$(use_with bzip2 bz2lib) $(use_with lzma lzmadec) \
-		${myconf} \
-		--disable-dependency-tracking || die "econf failed."
-
-	emake || die "emake failed."
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
-
-	# Create tar symlink for FreeBSD
-	if ! use prefix && [[ ${CHOST} == *-freebsd* ]]; then
-		dosym bsdtar /bin/tar
-		dosym bsdtar.1 /usr/share/man/man1/tar.1
-		# We may wish to switch to symlink bsdcpio to cpio too one day
-	fi
-
-	dodoc NEWS README
-
-	# just don't do this for Darwin
-	if [[ ${CHOST} != *-darwin* ]]; then
-		dodir /$(get_libdir)
-		mv "${ED}"/usr/$(get_libdir)/*.so* "${ED}"/$(get_libdir)
-		gen_usr_ldscript libarchive.so
-	fi
-}
