@@ -1,8 +1,8 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/libarchive-2.7.1.ebuild,v 1.1 2009/09/09 13:04:32 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/libarchive-2.7.902a.ebuild,v 1.1 2010/01/05 15:12:20 flameeyes Exp $
 
-EAPI=1
+EAPI="2"
 
 inherit eutils libtool toolchain-funcs flag-o-matic
 
@@ -14,7 +14,7 @@ SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.gz
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc64-solaris ~x86-solaris"
-IUSE="static acl xattr kernel_linux +bzip2 +lzma +zlib"
+IUSE="static static-libs acl xattr kernel_linux +bzip2 +lzma +zlib"
 
 COMPRESS_LIBS_DEPEND="lzma? ( app-arch/xz-utils )
 		bzip2? ( app-arch/bzip2 )
@@ -30,19 +30,21 @@ DEPEND="${RDEPEND}
 	kernel_linux? ( sys-fs/e2fsprogs
 		virtual/os-headers )"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
+src_prepare() {
 	elibtoolize
 	epunt_cxx
 }
 
-src_compile() {
+src_configure() {
 	local myconf
 
 	if ! use static ; then
 		myconf="--enable-bsdtar=shared --enable-bsdcpio=shared"
+	fi
+
+	# force static libs for static binaries
+	if use static && ! use static-libs; then
+		myconf="${myconf} --enable-static"
 	fi
 
 	# Check for need of this in 2.7.1 and later, on 2.7.0, -Werror was
@@ -60,15 +62,22 @@ src_compile() {
 		$(use_enable acl) $(use_enable xattr) \
 		$(use_with zlib) \
 		$(use_with bzip2 bz2lib) $(use_with lzma) \
+		$(use_enable static-libs static) \
 		--without-lzmadec \
 		${myconf} \
 		--disable-dependency-tracking || die "econf failed."
+}
 
-	emake || die "emake failed."
+src_test() {
+	# Replace the default src_test so that it builds tests in parallel
+	emake check || die "tests failed"
 }
 
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed."
+
+	# remove useless .a and .la files (only for non static compilation)
+	use static-libs || find "${ED}" \( -name '*.a' -or -name '*.la' \) -delete
 
 	# Create tar symlink for FreeBSD
 	if ! use prefix && [[ ${CHOST} == *-freebsd* ]]; then
